test/compflags/vass/fast-param-var.fast.good
fast-param-var.chpl:3: warning: compiling with --fast
fast-param-var.chpl:8: error: done
